--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -31,5 +31,28 @@
 <div class="product-page">
    <h1 class="heading">Info om {{product.name}}</h1>
    <br>
+   <div class="product-info">
+      <div class="part-one">
+         <h1 class="subject">Inkludert</h1>
+         {% if product.is_ecommerce %}
+         <li>Kontakt oss</li>
+         <li>Om oss</li>
+         <li>Responsiv design</li>
+         <li>Admin dashboard</li>
+         <li>Handlekurv</li>
+         <li>Mota betalinger</li>
+         {% endif %}
+         {% if product.is_blog %}
+         <li>Kontakt oss</li>
+         <li>Om oss</li>
+         <li>Responsiv design</li>
+         <li>Admin dashboard</li>
+         {% endif %}
+      </div>
+      <div class="part-two">
+         <h1 class="subject">Beskrivelse</h1>
+         <p>{{product.description}}</p>
+      </div>
+   </div>
 </div>
 {% endblock %}
