--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -11,6 +11,22 @@ html, body {
   background: white;
 }
 
+.hover:hover {
+  background: white;
+  color: #3c54a0;
+  border: 2px solid #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.hover:active {
+  background: white;
+  color: #3c54a0;
+  border: 2px solid #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .services {
   background: white;
   width: 100%;
@@ -96,7 +112,6 @@ html, body {
 .services .icon button {
   margin-top: 10px;
   border-radius: 4px;
-  color: #1e1e1e;
   width: 100px;
   font-size: 15px;
   padding: 5px;
@@ -112,8 +127,10 @@ html, body {
 
 .services .icon button.active {
   background: white;
-  color: black;
-  border-color: black;
+  border-color: #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: #3c54a0;
 }
 
 .product-section {
@@ -438,6 +455,22 @@ html, body {
   -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
           box-shadow: 1.5px 3px 2px #3c54a0;
   border: 2px solid transparent;
+}
+
+.hosting .home-order.hover:hover {
+  background: white;
+  color: #3c54a0;
+  border: 2px solid #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.hosting .home-order.hover:active {
+  background: white;
+  color: #3c54a0;
+  border: 2px solid #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .hosting .border {
