--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -145,6 +145,22 @@
   display: flex;
 }
 
+.cover-mobile .cover-buttons .hover:hover {
+  background: white;
+  color: #3c54a0 !important;
+  border: 2px solid #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.cover-mobile .cover-buttons .hover:active {
+  background: white;
+  color: #3c54a0 !important;
+  border: 2px solid #3c54a0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .cover-mobile .cover-buttons a {
   cursor: pointer;
   display: -webkit-box;
@@ -161,6 +177,7 @@
   margin-top: 10px;
   margin-right: 15px;
   border-radius: 4px;
+  color: white !important;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
