--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -40,7 +40,7 @@
    </div>
    <div class="cover-mobile">
       <div class="cover-text">
-         <h1>Moderne nettsider til<br><span>lave priser</span></h1>
+         <h1>Moderne nettsider til<br><span><div class="text-overlay">lave priser</div></span></h1>
          <p id="coverText2">Bli synlig på nett og ta neste steg for ditt bedrift, ved hjelp av våres fantastiske og moderne nettsider laget av Norges beste designere og utviklere</p>
          <div class="cover-buttons">
             <a class="hover" onclick="coverPrices()">Se priser</a>
