--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -46,18 +46,76 @@
 
     <div class="login-signup" id="loginORSignUp">
         <div id="choose">
-            <div class="part-one">
-                {% if request.user.is_authenticated %}
-                <a onclick="myaccount()">Min bruker</a>
-                <a id="logOut" href="{% url 'logout' %}">Logg ut</a>
-                {% else %}
-                <a onclick="login()">Logg inn</a>
-                <a>Lag bruker</a>
-                {% endif %}
+            <div id="signUpOrLogin">
+                <div class="part-one">
+                    {% if request.user.is_authenticated %}
+                    <a onclick="myaccount()">Min bruker</a>
+                    <a id="logOut" href="{% url 'logout' %}">Logg ut</a>
+                    {% else %}
+                    <a onclick="login()">Logg inn</a>
+                    <a onclick="signup()">Lag bruker</a>
+                    {% endif %}
+                </div>
+                <div class="part-two">
+                    <a onclick="signUpORLoginBack()">Tilbake</a>
+                </div>
+            </div>
+
+            <form id="loginForm" method="post">
+                {% csrf_token %}
+                <div class="part-one">
+                    <br>
+                    <label for="username" class="form-tag-username tag">Brukernavn</label>
+                    <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill skriv inn brukernavnet')" oninput="this.setCustomValidity('')">
+                    <br>
+                    <br>
+                    <label for="password" class="form-tag-password tag">Passord</label>
+                    <input type="password" id="password" name="password" required oninvalid="this.setCustomValidity('Skriv inn passordet')" oninput="this.setCustomValidity('')">
+                    <div id="signUpFormErrors">{{ form.username.errors }}</div>
+                    <br>
+                    <div id="signUpFormErrors">{{ form.password.errors }}</div>
+                    <button id="logInButton" type="submit" value="login" name="login">Logg inn</button>
+                </div>
+                    <div class="part-two">
+                        <a onclick="loginBack()">Tilbake</a>
+                    </div>
+            </form>
+
+        <form id="signUpForm" method="post" autocomplete="off">      
+                {% csrf_token %}
+                {{ form.non_field_errors }}
+                {{form.errors}}
+                <div class="part-one">
+                    <br>
+                    <label for="username" class="form-tag-username tag">Brukernavn</label>
+                    <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill velg en brukernavn')" oninput="this.setCustomValidity('')">
+                    <br>
+                    <br>
+                    <label for="first_name" class="form-tag-first_name tag">Fornavn</label>
+                    <input type="text" id="first_name" name="first_name" required oninvalid="this.setCustomValidity('Fornavn kan ikke være tom')" oninput="this.setCustomValidity('')">
+                    <br>
+                    <br>
+                    <label for="last_name" class="form-tag-last_name tag">Etternavn</label>
+                    <input type="text" id="last_name" name="last_name" required oninvalid="this.setCustomValidity('Etternavn kan ikke være tom')" oninput="this.setCustomValidity('')">
+                    <br>
+                    <br>
+                    <label for="email" class="form-tag-email tag">Epost</label>
+                    <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Skriv din epost her')" oninput="this.setCustomValidity('')">
+                    <br>
+                    <br>
+                    <label for="password1" class="form-tag-password1 tag">Passord</label>
+                    <input type="password" autocomplete="new-password" id="password1" name="password1" required oninvalid="this.setCustomValidity('Velg et passord')" oninput="this.setCustomValidity('')">
+                    <br>
+                    <br>
+                    <label for="password2" class="form-tag-password2 tag">Gjenta passord</label>
+                    <input type="password" id="password2" name="password2" required oninvalid="this.setCustomValidity('Du må gjenta passordet')" oninput="this.setCustomValidity('')">
+                    <button id="signUpFormButton" type="submit" name="signup" value="signup">Lag bruker</button>
             </div>
             <div class="part-two">
-                <a onclick="signUpORLoginBack()">Tilbake</a>
+                <a onclick="signUpBack()">Tilbake</a>
             </div>
+        </form>
+
         </div>
         <div class="my-account" id="myAccount">
             <p><strong>Navn:</strong> {{ request.user.get_full_name }}</p>
@@ -65,67 +123,18 @@
             <a class="my-orders" href="/">Mine bestillinger</a>
             <a class="my-account-back" onclick="myAccountBack()">Tilbake</a>
         </div>
-        <form id="loginForm" method="post">
-            {% csrf_token %}
-            <br>
-            <label for="username" class="form-tag-username tag">Brukernavn</label>
-            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill skriv inn brukernavnet')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
-            <label for="password" class="form-tag-password tag">Passord</label>
-            <input type="password" id="password" name="password" required oninvalid="this.setCustomValidity('Skriv inn passordet')" oninput="this.setCustomValidity('')">
-            <div id="signUpFormErrors">{{ form.username.errors }}</div>
-            <br>
-            <div id="signUpFormErrors">{{ form.password.errors }}</div>
-            <div id="submit">
-                <button id="logInButton" type="submit" value="login" name="login">Logg inn</button>
-                <span onclick="loginBack()">Tilbake</span>
-            </div>
-        </form>
-        <form id="signUpForm" method="post" autocomplete="off">      
-            {% csrf_token %}
-            {{ form.non_field_errors }}
-            {{form.errors}}
-            <br>
-            <label for="username" class="form-tag-username tag">Brukernavn</label>
-            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill velg en brukernavn')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
-            <label for="first_name" class="form-tag-first_name tag">Fornavn</label>
-            <input type="text" id="first_name" name="first_name" required oninvalid="this.setCustomValidity('Fornavn kan ikke være tom')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
-            <label for="last_name" class="form-tag-last_name tag">Etternavn</label>
-            <input type="text" id="last_name" name="last_name" required oninvalid="this.setCustomValidity('Etternavn kan ikke være tom')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
-            <label for="email" class="form-tag-email tag">Epost</label>
-            <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Skriv din epost her')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
-            <label for="password1" class="form-tag-password1 tag">Passord</label>
-            <input type="password" autocomplete="new-password" id="password1" name="password1" required oninvalid="this.setCustomValidity('Velg et passord')" oninput="this.setCustomValidity('')">
-            <br>
-            <br>
-            <label for="password2" class="form-tag-password2 tag">Gjenta passord</label>
-            <input type="password" id="password2" name="password2" required oninvalid="this.setCustomValidity('Du må gjenta passordet')" oninput="this.setCustomValidity('')">
-            <div id="submit">
-                <button id="signUpFormButton" type="submit" name="signup" value="signup">Lag Bruker</button>
-                <span onclick="signUpBack()">Tilbake</span>
-            </div>
-        </form>
     </div>
         
-        <a href="/bestill" class="order" id="makeOrder">Bestill</a>
-        <!-- DESKTOP -->
-        <div class="desktop-menu">
-            <ul class="desktop-ul">
-                <li class="desktop-li" id="desktopLi">
-                    <a onclick="prices()">Priser</a>
-                    <a href="/om-webiser">Om oss</a>
-                <a onclick="info()">Prosess</a>
-                <a href="/hosting-informasjon">Hosting</a>
-                <a onclick="contact()">Kontakt oss</a>
+    <a href="/bestill" class="order" id="makeOrder">Bestill</a>
+    <!-- DESKTOP -->
+    <div class="desktop-menu">
+        <ul class="desktop-ul">
+            <li class="desktop-li" id="desktopLi">
+                <a onclick="prices()">Priser</a>
+                <a href="/om-webiser">Om oss</a>
+            <a onclick="info()">Prosess</a>
+            <a href="/hosting-informasjon">Hosting</a>
+            <a onclick="contact()">Kontakt oss</a>
             </li>   
         </ul>
     </div>
