--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/store/product.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static '/scss/global.css' %}" type="text/css">
 
 <div class="cover">
    <div class="cover-desktop">
