--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -120,16 +120,15 @@ html, body {
   color: white;
   outline: none;
   background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
+  -webkit-box-shadow: 1px 2px 2px #3c54a0;
+          box-shadow: 1px 2px 2px #3c54a0;
   border: 2px solid transparent;
+  outline: none;
 }
 
 .services .icon button.active {
   background: white;
-  border-color: #3c54a0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  border: 2px solid #3c54a0;
   color: #3c54a0;
 }
 
@@ -450,11 +449,11 @@ html, body {
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   color: white;
+  border: 2px solid transparent;
   outline: none;
   background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
-  border: 2px solid transparent;
+  -webkit-box-shadow: 1px 2px 2px #3c54a0;
+          box-shadow: 1px 2px 2px #3c54a0;
 }
 
 .hosting .home-order.hover:hover {
