--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -120,7 +120,7 @@ $primaryColor: #2d9cb3;
         position: absolute;
         top: 60px;
         right: -65%;
-        transition:  all .7s ease-in-out;
+        transition:  .7s ease-in-out;
         img{
             position: absolute;
             right: 0;
@@ -216,7 +216,7 @@ $primaryColor: #2d9cb3;
         pointer-events: none;
         transition: all .3s ease-in-out;
         &.active{
-            bottom: 45px;
+            bottom: 15px;
             opacity: 1;
             pointer-events: visible;
         }
@@ -231,7 +231,7 @@ $primaryColor: #2d9cb3;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 55px;
+                height: 60px;
                 width: 100%;
                 border-bottom: 1px solid rgb(225, 225, 225);
                 font-size: 18px;
@@ -257,7 +257,7 @@ $primaryColor: #2d9cb3;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 55px;
+                height: 60px;
                 width: 100%;
                 font-weight: bolder;
                 &:active{
