--- a/static/scss/store/product.scss
+++ b/static/scss/store/product.scss
@@ -1,10 +1,10 @@
 // STANDARD PHONE
 .cover-mobile{ 
-    height: 55vh;
+    height: 55vh !important;
     .cover-text{
-      transform: translateY(-60px);
+      transform: translateY(-60px) !important;
         img{
-            top: 90px;
+            top: 90px !important;
         }
     }
   }
