--- a/static/scss/userprofile/login.css
+++ b/static/scss/userprofile/login.css
@@ -1,11 +1,16 @@
 .login-signup #loginForm {
   text-align: left;
-  width: auto;
+  width: 100%;
   display: none;
-  margin: 5px;
 }
 
-.login-signup #loginForm .form-tag-username {
+.login-signup #loginForm .part-one {
+  border-radius: 10px;
+  background: white !important;
+  width: 100%;
+}
+
+.login-signup #loginForm .part-one .form-tag-username {
   font-size: 15px;
   color: #3c54a0;
   background: white;
@@ -14,11 +19,11 @@
   width: max-content;
   padding: 0 2px;
   position: absolute;
-  left: 25px;
-  top: 28px;
+  left: 20px;
+  top: 13px;
 }
 
-.login-signup #loginForm .form-tag-password {
+.login-signup #loginForm .part-one .form-tag-password {
   font-size: 15px;
   color: #3c54a0;
   background: white;
@@ -27,66 +32,69 @@
   width: max-content;
   padding: 0 2px;
   position: absolute;
-  left: 25px;
-  top: 93px;
+  left: 20px;
+  top: 78px;
 }
 
-.login-signup #loginForm input {
+.login-signup #loginForm .part-one input {
   width: 100%;
   border: 2px solid #3c54a0;
   border-radius: 4px;
-  padding: 7px;
+  padding: 8px;
   outline: none;
   font-size: 15px;
 }
 
-.login-signup #loginForm #submit {
-  text-align: center;
-  width: auto;
-}
-
-.login-signup #loginForm button {
-  margin: 15px;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.login-signup #loginForm span {
-  margin: 15px;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.login-signup #loginForm #logInButton {
-  border-radius: 4px;
-  display: inline-block;
-  text-decoration: none;
-  width: 60%;
+.login-signup #loginForm .part-one button {
+  background: white;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  width: 100%;
+  border-top: 1px solid #e1e1e1;
   font-size: 18px;
-  padding: 5px;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  color: white;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
-  border: 2px solid transparent;
 }
 
-.login-signup #loginForm span {
-  border-radius: 30px;
-  border: 2px solid transparent;
-  color: #1e1e1e;
-  display: inline-block;
-  text-decoration: none;
-  width: 60%;
+.login-signup #loginForm .part-one button:active {
+  background: #d7d7d7;
+}
+
+.login-signup #loginForm .part-two {
+  border-radius: 10px;
+  background: white;
+  margin: 7px 0;
+}
+
+.login-signup #loginForm .part-two a {
+  border-radius: 10px;
   font-size: 18px;
-  padding: 5px;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  color: #485ab9;
-  background: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  width: 100%;
+  font-weight: bolder;
+}
+
+.login-signup #loginForm .part-two a:active {
+  background: #d7d7d7;
 }
 
 .login-signup #loginForm.active {
