--- a/static/scss/store/product.scss
+++ b/static/scss/store/product.scss
@@ -1,11 +1,8 @@
 // STANDARD PHONE
 .cover-mobile{ 
-    height: 55vh !important;
+    height: 60vh;
     .cover-text{
-      transform: translateY(-60px) !important;
-        img{
-            top: 90px !important;
-        }
+      transform: translateY(-60px);
     }
   }
   .product-page{
