--- a/static/scss/store/product.css
+++ b/static/scss/store/product.css
@@ -1,14 +1,10 @@
 .cover-mobile {
-  height: 55vh !important;
+  height: 60vh;
 }
 
 .cover-mobile .cover-text {
-  -webkit-transform: translateY(-60px) !important;
-          transform: translateY(-60px) !important;
-}
-
-.cover-mobile .cover-text img {
-  top: 90px !important;
+  -webkit-transform: translateY(-60px);
+          transform: translateY(-60px);
 }
 
 .product-page {
