--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -228,6 +228,7 @@ $primaryColor: #2d9cb3;
                 color: rgb(248, 18, 18);
             }
             a{
+                color: rgb(15, 15, 15);
                 display: flex;
                 justify-content: center;
                 align-items: center;
