--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -37,6 +37,7 @@
                 font-size: 15px;      
             }
             button{
+                color: rgb(15, 15, 15);
                 background: white;
                 border: none;
                 display: flex;
