--- a/static/scss/store/product.css
+++ b/static/scss/store/product.css
@@ -2,6 +2,11 @@
   height: 60vh;
 }
 
+.cover-mobile .img {
+  -webkit-box-shadow: 0px 5px 5px #3c54a0;
+          box-shadow: 0px 5px 5px #3c54a0;
+}
+
 .cover-mobile .cover-text {
   -webkit-transform: translateY(-60px);
           transform: translateY(-60px);
