--- a/static/scss/userprofile/signup.scss
+++ b/static/scss/userprofile/signup.scss
@@ -77,6 +77,7 @@
                 font-size: 15px;  
             }
             button{
+                color: rgb(15, 15, 15);
                 margin-top: 25px;
                 background: white;
                 border: none;
