--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
     <title>{% block title %}Webiser{% endblock %}</title>
     <base href="/">
     <link rel="stylesheet" href="{% static '/scss/userprofile/login.css' %}" type="text/css">
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body ontouchstart="">
     {% include 'core/nav.html' %}
 
     <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i></div>
