--- a/static/scss/parts/popup.css
+++ b/static/scss/parts/popup.css
@@ -8,12 +8,11 @@
   z-index: 10;
   text-align: center;
   background: #fafafa;
-  -webkit-transition: .5s;
-  transition: .5s;
   -webkit-box-shadow: 0px 1px 50px #3c54a0;
           box-shadow: 0px 1px 50px #3c54a0;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
+  pointer-events: visible;
 }
 
 #popup h1 {
@@ -38,7 +37,6 @@
 
 #popup.hidden {
   opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
+  pointer-events: none;
 }
 /*# sourceMappingURL=popup.css.map */
