--- a/static/scss/parts/popup.scss
+++ b/static/scss/parts/popup.scss
@@ -9,9 +9,9 @@
         z-index: 10;
         text-align: center;
         background: rgb(250, 250, 250);
-        transition: .5s;
         box-shadow: 0px 1px 50px rgb(60, 84, 160);
         transition: all .5s ease-in-out;
+        pointer-events: visible;
         h1{
             width: auto;
             color: black;
@@ -31,6 +31,6 @@
         }
         &.hidden{
             opacity: 0;
-            transform: translateY(50px);
+            pointer-events: none;
         }
     }
