--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -117,7 +117,7 @@ $primaryColor: #2d9cb3;
         background: rgb(255, 255, 255);
         width: 65%;
         height: 100vh;
-        position: absolute;
+        position: fixed;
         top: 60px;
         right: -65%;
         transition:  .7s ease-in-out;
