--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -24,35 +24,7 @@
    </div>
  </div>
 
-<div class="cover">
-   <div class="cover-desktop">
-      <div class="cover-text">
-         <h1>Moderne nettsider til lave priser</h1>
-         <p id="coverText2">Bli synlig på nett og ta neste steg for ditt bedrift, ved hjelp av våres fantastiske og moderne nettsider laget av Norges beste designere og utviklere</p>
-         <div class="cover-buttons">
-            <a class="hover" onclick="coverPrices()">Se priser</a>
-            <a class="hover" onclick="coverContact()">Kontakt oss</a>
-         </div>
-      </div>
-      <div class="img">
-         <img src="{% static '/images/covers/cover-7.png' %}" alt="cover-img">
-      </div>
-   </div>
-   <div class="cover-mobile">
-      <div class="cover-text">
-         <h1>Moderne nettsider til<br><span><div class="text-overlay">lave priser</div></span></h1>
-         <p id="coverText2">Bli synlig på nett og ta neste steg for ditt bedrift, ved hjelp av våres fantastiske og moderne nettsider laget av Norges beste designere og utviklere</p>
-         <div class="cover-buttons">
-            <a class="hover" onclick="coverPrices()">Se priser</a>
-            <a class="hover" onclick="coverContact()">Kontakt oss</a>
-         </div>
-      </div>
-      <div class="img">
-         <img src="{% static '/images/covers/cover-7.png' %}" alt="cover-img">
-      </div>
-   </div>
-</div>
-<div class="services" id="services">
+<!-- <div class="services" id="services">
    <h1 class="heading">Hvorfor velge Webiser?</h1>
 <div class="flex">
    <div class="icon" id="icon1">
@@ -81,9 +53,9 @@
    </div>
 </div>
    <div class="border"></div>
-</div>
+</div> -->
 
-<div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
+<!-- <div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
 <div class="product-section" id="productHomePage">
    <h1 class="heading">Priser</h1>
    <div class="flex">
@@ -97,8 +69,8 @@
       {% endfor %}
    </div>
    <div class="border"></div>
-</div>
-<div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
+</div> -->
+<!-- <div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="proccess" id="info">
    <h1 class="heading">Så enkelt er det</h1>
    <div class="content">
@@ -129,17 +101,10 @@
       </div>
    </div>
    <div class="border"></div>
-</div>
+</div> -->
 
-<div id="hostingScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
-<div class="hosting" id="hosting">
-   <h1 class="heading">100% sikkerhet med vår hosting tjeneste</h1>
-   <p>Bli synlig på nett i dag med Norges beste hosting tjeneste</p>
-   <button onclick="window.location.href='/bestill'" class="home-order hover">Bestill</button>
-   <div class="border"></div>
-</div>
 
-<div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
+<!-- <div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="contact-us" id="contactUs">
    <h1 class="heading">Trenger du extra hjelp?</h1>
    <p>Kontakter oss under</p>
@@ -160,5 +125,5 @@
          <button class="hover" type="submit" name="contact" value="contact">Send</button>
       </div>
    </form>
-</div>
+</div> -->
 {% endblock %}
