--- a/apps/core/templates/popup/cookie.html
+++ b/apps/core/templates/popup/cookie.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 
 <link rel="stylesheet" href="{% static '/scss/parts/popup.css' %}" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -8,4 +8,4 @@
     <div id="popup" class="hidden">
         <h1>Ved å bruke denne nettsiden samtyker du til vår bruk av cookies</h1>
         <button id="accept">Samtyk</button>
-    </div>
+    </div> -->
