--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -6,301 +6,8 @@
           box-sizing: border-box;
 }
 
-@media only screen and (min-device-width: 1024px) {
-  .flex {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-#backToTop {
-  position: fixed;
-  right: 0;
-  top: 70vh;
-  z-index: 1000;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
-          box-shadow: 1.5px 3px 2px #3c54a0;
-  border: 2px solid transparent;
-  opacity: 0;
-  -webkit-transform: scale(0.7);
-          transform: scale(0.7);
-}
-
-#backToTop.active {
-  opacity: 1;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-}
-
-#backToTop:active {
-  -webkit-transform: scale(0.8);
-          transform: scale(0.8);
-  -webkit-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out;
-}
-
-#backToTop i {
-  font-size: 18px;
-  color: white;
-  padding: 15px;
-  -webkit-transform: rotate(-44deg);
-          transform: rotate(-44deg);
-}
-
-.cover-desktop {
-  display: none;
-}
-
-.cover-mobile {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: white;
-}
-
-.cover-mobile .img {
-  -webkit-transform: translateY(120px);
-          transform: translateY(120px);
-  position: absolute;
-  background: white;
-  width: 100%;
-  height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0px 5px 5px #3c54a0;
-          box-shadow: 0px 5px 5px #3c54a0;
-}
-
-.cover-mobile .img img {
-  max-width: 320px;
-}
-
-.cover-mobile .cover-text {
-  width: 100%;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  -webkit-transform: translateY(-180px) translateX(0);
-          transform: translateY(-180px) translateX(0);
-  text-align: left;
-  margin: 5px;
-  margin-top: 0;
-}
-
-.cover-mobile .cover-text h1 {
-  -webkit-transform: translateY(-10);
-          transform: translateY(-10);
-  width: 100%;
-  font-size: 26px;
-  text-transform: uppercase;
-  font-family: 'Sniglet', cursive;
-  color: #3c54a0;
-  font-weight: 500;
-}
-
-.cover-mobile .cover-text h1 span {
-  font-weight: 900;
-  font-size: 30px;
-  color: transparent;
-}
-
-.cover-mobile .cover-text h1 span .text-overlay {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: auto;
-  background: -webkit-gradient(linear, left top, right top, from(#7a97f8), to(#324a96));
-  background: linear-gradient(to right, #7a97f8, #324a96);
-  -webkit-background-clip: text;
-}
-
-.cover-mobile .cover-text p {
-  color: #0a0a0a;
-  font-size: 14px;
-  font-family: 'Sniglet', cursive;
-  margin: 10px 0;
-  opacity: 0.7;
-}
-
-.cover-mobile .cover-buttons {
-  text-align: left;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.cover-mobile .cover-buttons .hover:hover {
-  background: white;
-  color: #3c54a0 !important;
-  border: 2px solid #3c54a0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.cover-mobile .cover-buttons .hover:active {
-  background: white;
-  color: #3c54a0 !important;
-  border: 2px solid #3c54a0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.cover-mobile .cover-buttons a {
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-decoration: none;
-  text-align: center;
-  margin-top: 10px;
-  margin-right: 15px;
-  border-radius: 4px;
-  color: white !important;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  font-size: 15px;
-  padding: 8px 13px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1px 3px 2px #3c54a0;
-          box-shadow: 1px 3px 2px #3c54a0;
-  border: 2px solid transparent;
-}
-
-@media only screen and (min-device-width: 1024px) {
-  .cover-mobile {
-    display: none;
-  }
-  .cover-desktop {
-    position: relative;
-    width: 100%;
-    height: 65vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background: #7890dc;
-  }
-  .cover-desktop .img {
-    background: -webkit-gradient(linear, left top, right top, from(#647cbe), color-stop(70%, transparent));
-    background: linear-gradient(to right, #647cbe, transparent 70%);
-    width: 100%;
-    height: 100%;
-    margin-top: 120px;
-  }
-  .cover-desktop .cover-text {
-    width: 100%;
-    -webkit-transform: translateY(0) translateX(20px);
-            transform: translateY(0) translateX(20px);
-    position: relative;
-    text-align: left;
-    margin: 15px;
-    margin-top: 0;
-  }
-  .cover-desktop .cover-text h1 {
-    width: 100%;
-    font-size: 26px;
-    color: #fafafa;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-  .cover-desktop .cover-text p {
-    -webkit-transition: ease-in 1s;
-    transition: ease-in 1s;
-    color: #fafafa;
-    font-size: 18px;
-  }
-  .cover-desktop .cover-buttons {
-    text-align: center;
-    -webkit-transform: translateY(30px);
-            transform: translateY(30px);
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: left;
-        -ms-flex-pack: left;
-            justify-content: left;
-    -webkit-box-align: left;
-        -ms-flex-align: left;
-            align-items: left;
-  }
-  .cover-desktop .cover-buttons a {
-    cursor: pointer;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    text-decoration: none;
-    text-align: center;
-    margin-top: 10px;
-    margin-right: 15px;
-    border-radius: 30px;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    font-size: 14px;
-    padding: 10px;
-    -webkit-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    outline: none;
-    text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    background: transparent;
-    -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-            box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-    border: 2px solid white;
-    -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
-  }
-  .cover-desktop .cover-buttons a:nth-child(1) {
-    background: #3c54a0;
-  }
+body {
+  background: -webkit-gradient(linear, right top, left bottom, from(red), to(white));
+  background: linear-gradient(to bottom left, red, white);
 }
 /*# sourceMappingURL=global.css.map */
