--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -6,216 +6,6 @@
   }
 
 // GLOBAL
-@media only screen and (min-device-width:1024px) { 
-  .flex{
-    width: 100%;
-    display: flex;
-    align-items: center;
-  }
-}
-
-// STANDARD PHONE
-#backToTop{
-  position: fixed;
-  right: 0;
-  top: 70vh;
-  z-index: 1000;
-  transition: all .5s ease-in-out;
-  outline: none;
-  background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
-  box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
-  border: 2px solid transparent;
-  opacity: 0;
-  transform: scale(0.7);
-  &.active{
-    opacity: 1;
-    transform: scale(1);
-  }
-  &:active{
-    transform: scale(.8);
-    transition: all .1s ease-in-out;
-  }
-    i{
-    font-size: 18px;
-    color: white;
-    padding: 15px;
-    transform: rotate(-44deg);
-  }
-}
-
-.cover-desktop{
-  display: none;
-}
-.cover-mobile{ 
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  .img{
-    transform: translateY(120px);
-    position: absolute;
-    background: white;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 5px 5px rgb(60, 84, 160);
-    img{
-      max-width: 320px;
-    }
-  }
-  .cover-text{
-    width: 100%;
-    height: max-content;
-    transform: translateY(-180px) translateX(0);
-    text-align: left;
-    margin: 5px;
-    margin-top: 0;
-    h1{
-      transform: translateY(-10);
-      width: 100%;
-      font-size: 26px;
-      text-transform: uppercase;
-      font-family: 'Sniglet', cursive;
-      color: rgb(60, 84, 160);
-      font-weight: 500;
-      span{
-        font-weight: 900;
-        font-size: 30px;
-        color: transparent;
-        .text-overlay{
-          width: max-content;
-          height: auto;
-          background: linear-gradient(to right, rgb(122, 151, 248), rgb(50, 74, 150));
-          -webkit-background-clip: text;
-        }
-      }
-    }
-    p{
-      color: rgb(10, 10, 10);
-      font-size: 14px;
-      font-family: 'Sniglet', cursive;
-      margin: 10px 0;
-      opacity: 0.7;
-    }
-  }
-  .cover-buttons{
-    text-align: left;
-    width: 100%;
-    display: flex;
-    .hover{
-      &:hover{
-        background: white;
-        color: rgb(60, 84, 160) !important;
-        border: 2px solid rgb(60, 84, 160);
-        box-shadow: none;
-      }
-      &:active{
-        background: white;
-        color: rgb(60, 84, 160) !important;
-        border: 2px solid rgb(60, 84, 160);
-        box-shadow: none;
-      }
-    }
-    a{
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      text-align: center;
-      margin-top: 10px;
-      margin-right: 15px;
-      border-radius: 4px;
-      color: white !important;
-      width: max-content;
-      font-size: 15px;
-      padding: 8px 13px;
-      transition: all .2s ease-in-out;
-      outline: none;
-      background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
-      box-shadow: 1px 3px 2px rgb(60, 84, 160);
-      border: 2px solid transparent;
-    }
-  }
-}
-
-// NORMAL DESKTOP
-@media only screen and (min-device-width:1024px) { 
-.cover-mobile{
-  display: none;
-}
-.cover-desktop{
-  position: relative;
-  width: 100%;
-  height: 65vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgb(120, 144, 220);
-  .img{
-    background: linear-gradient(to right, rgb(100, 124, 190), transparent 70%);
-    width: 100%;
-    height: 100%;
-    margin-top: 120px;
-  }
-  .cover-text{
-    width: 100%;
-    transform: translateY(0) translateX(20px);
-    position: relative;
-    text-align: left;
-    margin: 15px;
-    margin-top: 0;
-    h1{
-      width: 100%;
-      font-size: 26px;
-      color: rgb(250, 250, 250);
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
-    p{
-      transition: ease-in 1s;
-      color: rgb(250, 250, 250);
-      font-size: 18px;
-    }
-  }
-  .cover-buttons{
-    text-align: center;
-    transform: translateY(30px);
-    width: 100%;
-    display: flex;
-    justify-content: left;
-    align-items: left;
-    a{
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      text-align: center;
-      margin-top: 10px;
-      margin-right: 15px;
-      border-radius: 30px;
-      width: max-content;
-      font-size: 14px;
-      padding: 10px;
-      transition: all .2s ease-in-out;
-      outline: none;
-      text-transform: uppercase;
-      font-family: 'Oswald', sans-serif;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      background: transparent;
-      box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-      border: 2px solid white;
-      backdrop-filter: blur(20px);
-      &:nth-child(1){
-        background: rgb(60, 84, 160);
-      }
-    }
-  }
- }
+body{
+  background: linear-gradient(to bottom left, red, white);
 }
